# langchain-deep-agent-boilerplate

./: .gitignore  LICENSE  README.md  langgraph.json  pyproject.toml  skills-lock.json
docs/: aws-deployment.md  cloudflare-deployment.md  flight-search-agent-design.md  future-improvements.md  stateful-deepagents-cloudflare-short.md  stateful-deepagents-cloudflare.md
scripts/: check_google_permissions.py  run.py
src/deep_agent/: __init__.py  agent.py  file_tools.py  google_workspace_tools.py  mcp_client.py  prompts.py  research_tools.py  subagents.py  task_tool.py  todo_tools.py
src/deep_agent/agents/: __init__.py  browser.py  report_writer.py  researcher.py  types.py
src/deep_agent/tools/: __init__.py
src/deep_agent/tools/browser/: __init__.py  base.py  playwright.py
src/deep_agent/tools/document/: __init__.py  base.py  google.py
src/deep_agent/tools/reflect/: __init__.py  base.py
src/deep_agent/tools/search/: __init__.py  _pipeline.py  base.py  brave.py  tavily.py
tests/evals/: conftest.py  test_search_evals.py
tests/integration/: conftest.py  test_search_adapters.py
tests/unit/: test_agents.py  test_tools.py
