[project]
name = "deep-agent-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.8",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "langsmith>=0.3.0",
    "langchain-openai",
    "langchain-ollama",
    "langchain-tavily",
    "markdownify",
    "python-dotenv",
    "playwright",
    "langgraph-cli[inmem]",
    "tavily-python>=0.7.25",
    "langchain-mcp-adapters>=0.1.0",
    "google-auth-oauthlib>=1.4.0",
    "google-api-python-client>=2.0",
]
